android test plugin - plugin separated from tasks